--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ beautifulsoup4
 readability-lxml
 trafilatura
 sqlite-utils
-sentence-transformers
+sentence-transformers==3.0.1
 chromadb==0.3.29
-scikit-learn
+scikit-learn==1.4.2
 pydantic>=2.5,<3.0
 pyyaml
 tqdm
