--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,12 @@ readability-lxml
 trafilatura
 sqlite-utils
 sentence-transformers==3.0.1
-chromadb==0.3.29
+chromadb>=0.5.0
 scikit-learn==1.4.2
 pydantic>=2.0
 pyyaml
 tqdm
 tenacity
-ragas
+ragas>=0.1.8
 openai>=1.40.0,<2.0.0
 litellm>=1.35.3
