--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,6 @@ ragas>=0.1.8
 openai>=1.40.0,<2.0.0
 litellm>=1.41.0
 pysqlite3-binary==0.5.2.post3
+torch==2.2.2
+transformers>=4.41.2,<4.45
+tokenizers<0.20
